# authentication_microservice

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile-dev  Makefile  docker-compose-base.yaml  docker-compose.yaml
config/: haproxy.cfg  haproxy_base.cfg  sleep.sh
misc/schema/: iot.sql
src/: connection_pool_manager.rs  cors_filter.rs  echo_resource.rs  entities.rs  error_base.rs  facebook_resource.rs  filters.rs  jwt_service.rs  main.rs  oauth.rs  user_dao.rs  user_resource.rs  user_service.rs
src/daos/: user_dao.rs
src/entities/: mod.rs  user_entity.rs
src/entities/srp/: mod.rs  srp_entities.rs
src/exceptions/: error_base.rs  mod.rs
src/filters/: authentication_filter.rs  cors_filter.rs  mod.rs
src/ouath/: oauth.rs
src/restful/: echo_resource.rs  facebook_resource.rs  mod.rs  srp_resource.rs  user_resource.rs
src/services/: jwt_service.rs  mod.rs  user_service.rs
