[package]
name = "authentication_microservice"
version = "0.1.0"
authors = ["Mohammed Al-Ani <mohammedalanny@gmail.com>"]
edition = "2018"
repository = "https://github.com/MoeAl-Ani/authentication_microservice"
keywords = ["rust", "microservice", "authentication", "actix"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-service = "1.0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3.8"
log = "0.4.11"
env_logger = "0.8.2"
chrono = "0.4.19"
jsonwebtoken = "7"
#tokio = { version = "0.2", features = ["full"] }
#async-trait = "0.1.42"
#openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
actix-rt = "1"