[package]
name = "authentication_microservice"
version = "0.1.0"
authors = ["Mohammed Al-Ani <mohammedalanny@gmail.com>"]
edition = "2018"
repository = "https://github.com/MoeAl-Ani/authentication_microservice"
keywords = ["rust", "microservice", "authentication", "actix"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = {version = "3", features = ["openssl"]}
actix-service = "1.0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = {version = "0.3.8", features = ["executor"]}
log = "0.4.11"
env_logger = "0.8.2"
chrono = "0.4.19"
jsonwebtoken = "7"
tokio = { version = "1.0.1", features = ["full"] }
rand = "0.8.1"
uuid = { version = "0.8", features = ["serde", "v4"] }
async-trait = { version = "0.1.42"}
reqwest = { version = "0.10" }
openssl = { version="0.10.32", features = ["vendored"] }
rust_srp = "0.1.8"
num-bigint = "0.3.1"

#mysql pool
sqlx = { version = "0.4.2", features = [ "mysql", "runtime-async-std-rustls" ] }
#mysql async runtime
async-std = { version = "1.8.0", features = [ "attributes" ] }

[dev-dependencies]
actix-rt = "1"